# RLModInjector

./: .gitignore  AFTER_CHEAT_ENGINE.md  BEST_SOLUTION_VIGEM.md  BUILD_CSHARP_VERSION.md  BUILD_INGAME_GUI_WALKTHROUGH.md  BUILD_SUCCESS_GUIDE.md  CHEAT_ENGINE_GUIDE.md  CMakeLists.txt  CONGRATULATIONS.md  CSHARP_BUILD_FIXED.md  DECOMPILE_GUIDE.md  DECOMPILE_NATIVE_PE.md  DOWNLOAD_VIGEM.md  DOWNLOAD_VIGEMCLIENT_DLL.md  EASY_BUILD_GUIDE.md  FINAL_SOLUTION.md  FIX_D3D11_HOOK_ERROR.md  FIX_ICON_ERROR.md  FIX_IMGUI_STRUCTURE.md  GET_INGAME_GUI.md  HOW_TO_USE_NOW.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  INSTALL_BUILD_TOOLS.md  ITEMS_TAB_ADDED.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  PROPER_INPUT_INJECTION.md  QUICKSTART.md  QUICK_STATUS_CHECK.md  README.md  README_CHEAT_ENGINE_SETUP.md  REAL_ITEM_SOLUTION.md  RESEARCH_FINDINGS.md  RL_TAS_MOD_README.md  ROCKETLIB_RESEARCH.md  RocketLeagueTAS.sln  SEARCH_RESULTS_INPUT_METHODS.md  SETUP.md  SIMPLER_SOLUTION.md  (+21 more)
RocketLeagueTAS.App/: MainForm.Designer.cs  MainForm.cs  Program.cs  RocketLeagueTAS.App.csproj
RocketLeagueTAS.App/Properties/: AssemblyInfo.cs
RocketLeagueTAS.DLL/: DllMain.cs  GameState.cs  InputRecorder.cs  InputReplayer.cs  MemoryManager.cs  RocketLeagueTAS.DLL.csproj  TASCore.cs
RocketLeagueTAS.GUI/: Program.cs  RocketLeagueTAS.GUI.csproj  TASGUI.Designer.cs  TASGUI.cs  TASGUI.resx
RocketLeagueTAS.Injector/: DLLInjector.cs  Program.cs  RocketLeagueTAS.Injector.csproj
injector/: CMakeLists.txt  Injector.cpp
src/: D3D11Hook.cpp  D3D11Hook.h  DllMain.cpp  InputRecorder.cpp  InputRecorder.h  InputReplayer.cpp  InputReplayer.h  ItemManager.cpp  ItemManager.h  MemoryManager.cpp  MemoryManager.h  TASData.cpp  TASData.h  TASMod.cpp  TASMod.h  VirtualController.cpp  VirtualController.h
(+5 files in other folders)
